# OPCClient

./: .gitignore  CMakeLists.txt  README.md
cmake/: linux.cmake  macos.cmake
include/: AscendingMessageHandler.h  Exception.h  GlobalDefine.h  KafkaProducer.h  KafkaProduder.h  Logger.h  Machine.h  MessageConsumer.h  MessageProducer.h  OPCClient.h  OPCClientManager.h
src/: AscendingMessageHandler.cpp  Exception.cpp  KafkaProducer.cpp  KafkaProduder.cpp  Logger.cpp  Machine.cpp  OPCClient.cpp  OPCClientManager.cpp  main.cpp
